[gd_scene load_steps=11 format=2]

[ext_resource path="res://Resource/Fonts/ButtonStyle.tres" type="Theme" id=1]
[ext_resource path="res://Resource/Fonts/TextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Resource/Fonts/TextFontSubHeader.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scene/ChoosePeople.gd" type="Script" id=5]
[ext_resource path="res://Scene/ListenerCheck.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id=3]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
expand_margin_left = 2.0

[sub_resource type="Theme" id=2]
default_font = ExtResource( 2 )
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0.258824, 0.258824, 0.258824, 0.501961 )
LineEdit/fonts/font = ExtResource( 2 )
LineEdit/styles/normal = SubResource( 1 )
LineEdit/styles/read_only = SubResource( 3 )
OptionButton/colors/font_color = Color( 0, 0, 0, 1 )
OptionButton/styles/normal = SubResource( 10 )
TextEdit/colors/font_color = Color( 0, 0, 0, 1 )
TextEdit/colors/font_color_readonly = Color( 0.258824, 0.258824, 0.258824, 0.501961 )
TextEdit/styles/normal = SubResource( 4 )
TextEdit/styles/read_only = SubResource( 3 )

[node name="ChoosePeople" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.501961 )

[node name="CoreDesc" type="ColorRect" parent="."]
anchor_left = 0.233398
anchor_top = 0.103333
anchor_right = 0.766602
anchor_bottom = 0.896667
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BackBtn" type="Button" parent="CoreDesc"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -194.0
margin_top = -55.0
margin_right = -44.0
margin_bottom = -25.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 1 )
text = "Назад"

[node name="ConfirmBtn" type="Button" parent="CoreDesc"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 37.0
margin_top = -55.0
margin_right = 187.0
margin_bottom = -25.0
rect_min_size = Vector2( 150, 30 )
theme = ExtResource( 1 )
text = "Выбрать"

[node name="Header" type="Label" parent="CoreDesc"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -219.0
margin_top = 32.0
margin_right = 219.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Выберите пользователей"
align = 1
valign = 1
autowrap = true

[node name="FindByName" type="LineEdit" parent="CoreDesc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -204.0
margin_top = -157.0
margin_right = 94.0
margin_bottom = -131.0
theme = SubResource( 2 )
placeholder_text = "Введите ФИО"

[node name="ScrollContainer" type="ScrollContainer" parent="CoreDesc"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.0
margin_top = -113.0
margin_right = 205.0
margin_bottom = 150.0

[node name="VBoxContainer" type="VBoxContainer" parent="CoreDesc/ScrollContainer"]
script = ExtResource( 6 )

[node name="FindBtn" type="Button" parent="CoreDesc"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 105.0
margin_top = -395.0
margin_right = 205.0
margin_bottom = -369.0
rect_min_size = Vector2( 100, 26 )
theme = ExtResource( 1 )
text = "Поиск"

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="HTTPUserList" type="HTTPRequest" parent="."]

[connection signal="pressed" from="CoreDesc/BackBtn" to="." method="_on_BackBtn_pressed"]
[connection signal="pressed" from="CoreDesc/ConfirmBtn" to="." method="_on_ConfirmBtn_pressed"]
[connection signal="pressed" from="CoreDesc/FindBtn" to="." method="_on_FindBtn_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="HTTPUserList" to="." method="_on_HTTPUserList_request_completed"]
